--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,8 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
+    android:width="108dp"
+    android:height="108dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
+  <group android:scaleX="0.4888889"
+      android:scaleY="0.4888889"
+      android:translateX="130.84445"
+      android:translateY="130.84445">
     <path
         android:pathData="M0,0C168.96,0 337.92,0 512,0C512,168.96 512,337.92 512,512C343.04,512 174.08,512 0,512C0,343.04 0,174.08 0,0Z"
         android:fillColor="#ED3237"/>
@@ -30,4 +34,5 @@
     <path
         android:pathData="M338.44,433.69C340.35,433.66 340.35,433.66 342.29,433.64C350.34,433.63 357.79,433.87 364.44,438.81C368.35,444.28 368.85,450.47 368,457C365.65,461.88 362.75,464.44 358,467C351.33,469.1 345.09,469.33 338.13,469.31C337.1,469.33 336.08,469.34 335.02,469.36C328.12,469.37 319.86,469.24 314.31,464.58C310.43,460.11 309.83,456.37 309.75,450.63C309.72,449.5 309.7,448.38 309.67,447.23C310.03,443.68 310.95,441.88 313,439C313.39,438.44 313.78,437.89 314.19,437.31C320.83,432.5 330.7,433.67 338.44,433.69Z"
         android:fillColor="#221D1D"/>
+  </group>
 </vector>
