Splah screen, Login screen redefined

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,40 +1,38 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
-    <!-- Top container -->
-    <RelativeLayout
-        android:id="@+id/top_container"
+    <ImageView
+        android:id="@+id/logo_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingBottom="32dp">
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="Fantom Logo"
+        android:src="@drawable/fantom_logo"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Logo -->
-        <ImageView
-            android:id="@+id/logo_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:adjustViewBounds="true"
-            android:src="@drawable/fantom_logo"
-            android:contentDescription="Fantom Logo"
-            android:scaleType="fitXY" />
-    </RelativeLayout>
-
-    <!-- Username Input -->
     <LinearLayout
         android:id="@+id/username_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/top_container"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="48dp"
-        android:layout_marginRight="32dp"
-        android:orientation="vertical">
+        android:layout_marginEnd="32dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo_image">
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,16 +55,17 @@
 
     </LinearLayout>
 
-    <!-- Password Input -->
     <LinearLayout
         android:id="@+id/password_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/username_layout"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="32dp"
-        android:orientation="vertical">
+        android:layout_marginEnd="32dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/username_layout">
 
         <TextView
             android:layout_width="wrap_content"
@@ -88,35 +87,33 @@
             android:textColor="#000000" />
     </LinearLayout>
 
-    <!-- Forgot Password Link -->
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/password_layout"
-        android:layout_alignEnd="@id/password_layout"
         android:layout_marginTop="8dp"
         android:text="Forgot password?"
         android:textColor="#808080"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/password_layout"
+        app:layout_constraintEnd_toEndOf="@id/password_layout" />
 
-    <!-- Login Button -->
     <Button
-    android:id="@+id/btn_login"
-    android:layout_width="300dp"
-    android:layout_height="50dp"
-    android:layout_below="@id/forgot_password"
-    android:layout_centerHorizontal="true"
-    android:background="@drawable/login_button_gradient"
-    android:text="LOGIN"
-    android:textColor="#FFFFFF"
-    android:textSize="16sp"
-    android:gravity="center"
-    android:minWidth="0dp"
-    android:minHeight="0dp"
-    android:padding="0dp"
-    android:backgroundTint="@null"
-    android:layout_marginTop="32dp"
-    />
+        android:id="@+id/btn_login"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/login_button_gradient"
+        android:text="LOGIN"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:padding="0dp"
+        android:backgroundTint="@null"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
